# sleigh-sys

./: Cargo.toml  LICENSE  README.md  build.rs
scripts/: fetch_ghidra.py  sync_sleigh.sh  update_sleigh.py
sleigh/: CMakeLists.txt
src/: lib.rs
src/binding/: binding.hh
